syntax = "proto3";

package datacore.adapter;

import "Types.proto";

option csharp_namespace = "DataCore.Adapter.Grpc";

service AdaptersService {
    rpc GetAdapters(GetAdaptersRequest) returns (GetAdaptersResponse);
    rpc GetAdapter(GetAdapterRequest) returns (GetAdapterResponse);
}


// Gets information about the registered adapters
message GetAdaptersRequest { }
message GetAdaptersResponse {
    repeated AdapterDescriptor adapters = 1;
}


// Gets information about a specific adapter
message GetAdapterRequest { 
    string adapter_id = 1;
}
message GetAdapterResponse {
    ExtendedAdapterDescriptor adapter = 1;
}
