syntax = "proto3";

package datacore.adapter;

import "Types.proto";

option csharp_namespace = "DataCore.Adapter.Grpc";

service ExtensionFeaturesService {
    rpc GetDescriptor(GetExtensionDescriptorRequest) returns (FeatureDescriptor);
    rpc GetOperations(GetExtensionOperationsRequest) returns (GetExtensionOperationsResponse);
    rpc InvokeExtension(InvokeExtensionRequest) returns (InvokeExtensionResponse);
    rpc InvokeStreamingExtension(InvokeExtensionRequest) returns (stream InvokeExtensionResponse);
    rpc InvokeDuplexStreamingExtension(stream InvokeExtensionRequest) returns (stream InvokeExtensionResponse);
}


message GetExtensionDescriptorRequest {
    string adapter_id = 1;
    string feature_uri = 2;
}


message GetExtensionOperationsRequest {
    string adapter_id = 1;
    string feature_uri = 2;
}


message GetExtensionOperationsResponse {
    repeated ExtensionFeatureOperationDescriptor operations = 1;
}


message InvokeExtensionRequest {
    string adapter_id = 1;
    string operation_id = 2;
    // Ordinal 3 is no longer in use.
    reserved 3;
    bytes arguments = 4; // UTF-8 JSON
}


message InvokeExtensionResponse {
    // Ordinal 1 is no longer in use.
    reserved 1;
    bytes results = 2; // UTF-8 JSON
    uint32 status_code = 3;
}
