syntax = "proto3";

package datacore.adapter;

import "Types.proto";

option csharp_namespace = "DataCore.Adapter.Grpc";


service HostInfoService {
    rpc GetHostInfo(GetHostInfoRequest) returns (GetHostInfoResponse);
}


// Gets information about the host app
message GetHostInfoRequest { }
message GetHostInfoResponse {
    HostInfo host_info = 1;
}
